--- a/css/styles.css
+++ b/css/styles.css
@@ -328,11 +328,37 @@ body, html {
 }
 
 /* line 14, ../sass/partials/_modules.scss */
+.navbar-logo {
+  height: 40px;
+}
+
+/* line 19, ../sass/partials/_modules.scss */
 .privacy-s1 {
   background-position-x: left !important;
 }
 
-/* line 20, ../sass/partials/_modules.scss */
+/* line 24, ../sass/partials/_modules.scss */
 .text-shadow {
   text-shadow: 1px 1px 3px #333;
+}
+
+/* line 28, ../sass/partials/_modules.scss */
+header {
+  z-index: 10;
+}
+
+/* line 31, ../sass/partials/_modules.scss */
+textarea {
+  resize: none;
+}
+
+@media all and (max-width: 767px) {
+  /* line 36, ../sass/partials/_modules.scss */
+  .navbar-nav {
+    backdrop-filter: blur(5px);
+    background-color: #fff;
+    border: 1px solid #999;
+    opacity: 0.9;
+    padding: 10px;
+  }
 }
