--- a/sass/partials/_modules.scss
+++ b/sass/partials/_modules.scss
@@ -10,14 +10,35 @@
         background-position-x: 60%!important;
     }
 }
+.navbar{
+    &-logo{
+        height: $logo__height;
+    }
+}
 .privacy{
     &-s1{
         background-position-x: left!important;
     }
 }
-
 .text{
     &-shadow{
         text-shadow: $text__shadow;
+    }
+}
+header{
+    z-index: 10;
+}
+textarea{
+    resize: none;
+}
+@media all and (max-width:767px){
+    .navbar{
+        &-nav{
+            backdrop-filter: blur(5px); 
+            background-color: #fff;
+            border: 1px solid #999;
+            opacity: 0.9;
+            padding: 10px;
+        }
     }
 }
